Mon Feb  1 15:14:56 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_size_allocate): 
	 Fixed problem with uints resulting in huge child
	 allocations.

Mon Feb  1 14:54:28 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_expose): Cast uints
	 to ints in geometry calculations. This should
	 prevent FP exceptions on FreeBSD when quantities
	 become negative. [ Actually, this is probably
	 a workaround with a gcc bug with handling of
	 bitfields, according to Ben Jackson <ben@ben.com> ]

Mon Feb  1 13:35:14 GMT 1999 Tony Gale  <gale@gtk.org>

	* examples/Makefile: update to new examples

	* examples/menu/itemfactory.c: I must have forgotten to
	  'cvs add' this file

Mon Feb  1 09:16:03 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - Complete documentation of Label widget API
	  - New sections for the following:
		* Arrows
		* Alignment
		* Button Boxes
		* Viewports

	* examples/arrow/*, examples/buttonbox/*, examples/label/*
	  - New code examples

Fri Jan 29 09:44:37 GMT 1999 Tony Gale  <gale@gtk.org>

	* examples/fixed/*, examples/frame/*
	  - Examples from the Tutorial

Fri Jan 29 09:18:41 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - New sections on the Fixed and Frame containers
	  - Rearrange the Containers section so the easier ones
	    are first
	  - Move the List widget section to an appendix

Thu Jan 28 12:14:12 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/package_tutorial.sh: script to convert and
	  package up the tutorial - stick it here so I don't lose
	  it when I accidentally delete it again.
 
Thu Jan 28 10:16:28 GMT 1999 Tony Gale  <gale@gtk.org>

        * docs/gtk_tut.sgml:
          - Replace all uses of deprecated functions.
          - Replace menufactory example with itemfactory example
            from Nick Scott <mendigo@geocities.com>
          - Minor bug fixes in the examples.

1999-01-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdk/gdkim.c: