@@ -1,3 +1,11 @@
+Mon Feb  1 16:47:55 1999  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk.m4: Pass gthread on to gtk-config.
+
+	* configure.in gtk-config.in: Support gthread flag to 
+	  add thread cflags/libraries into the output of 
+	  gtk-config.
+
 Mon Feb  1 15:14:56 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkoptionmenu.c (gtk_option_menu_size_allocate): 
