@@ -2,18 +2,35 @@
 
 glib_libs="@glib_libs@"
 glib_cflags="@glib_cflags@"
+glib_thread_libs="@glib_thread_libs@"
+glib_thread_cflags="@glib_thread_cflags@"
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 exec_prefix_set=no
 
-usage="\
-Usage: gtk-config [--prefix[=DIR]] [--exec-prefix[=DIR]] [--version] [--libs] [--cflags]"
+usage()
+{
+	cat <<EOF
+Usage: gtk-config [OPTIONS] [LIBRARIES]
+Options:
+	[--prefix[=DIR]]
+	[--exec-prefix[=DIR]]
+	[--version]
+	[--libs]
+	[--cflags]
+Libraries:
+	gtk
+	gthread
+EOF
+	exit $1
+}
 
 if test $# -eq 0; then
-      echo "${usage}" 1>&2
-      exit 1
+	usage 1 1>&2
 fi
+
+lib_gtk=yes
 
 while test $# -gt 0; do
   case "$1" in
@@ -29,19 +46,51 @@ while test $# -gt 0; do
       fi
       ;;
     --prefix)
-      echo $prefix
+      echo_prefix=yes
       ;;
     --exec-prefix=*)
       exec_prefix=$optarg
       exec_prefix_set=yes
       ;;
     --exec-prefix)
-      echo $exec_prefix
+      echo_exec_prefix=yes
       ;;
     --version)
       echo @GTK_VERSION@
       ;;
     --cflags)
+      echo_cflags=yes
+      ;;
+    --libs)
+      echo_libs=yes
+      ;;
+    gtk)
+      lib_gtk=yes
+      ;;
+    gthread)
+      lib_gthread=yes
+      ;;
+    *)
+      usage 1 1>&2
+      ;;
+  esac
+  shift
+done
+
+if test "$echo_prefix" = "yes"; then
+	echo $prefix
+fi
+
+if test "$echo_exec_prefix" = "yes"; then
+	echo $exec_prefix
+fi
+
+if test "$lib_gthread" = "yes"; then
+      glib_cflags="$glib_thread_cflags"
+      glib_libs="$glib_thread_libs"
+fi
+
+if test "$echo_cflags" = "yes"; then
       if test @includedir@ != /usr/include ; then
         includes=-I@includedir@
         for i in $glib_cflags ; do
@@ -51,8 +100,9 @@ while test $# -gt 0; do
         done
       fi
       echo $includes @x_cflags@ $glib_cflags
-      ;;
-    --libs)
+fi
+
+if test "$echo_libs" = "yes"; then
       my_glib_libs=
       libdirs=-L@libdir@
       for i in $glib_libs ; do
@@ -64,13 +114,7 @@ while test $# -gt 0; do
           fi
         fi
       done
+
       echo $libdirs @x_ldflags@ -lgtk -lgdk $my_glib_libs @INTLLIBS@ @x_libs@ @GDK_WLIBS@ -lm
-      ;;
-    *)
-      echo "${usage}" 1>&2
-      exit 1
-      ;;
-  esac
-  shift
-done
+fi      
 
